# audioencoder.flac

./: .gitignore  .travis.yml  CMakeLists.txt  FindFLAC.cmake  README.md  appveyor.yml
audioencoder.flac/: addon.xml  addon.xml.in
audioencoder.flac/resources/: settings.xml
debian/: changelog  changelog.in  control  kodi-audioencoder-flac.install  rules
depends/common/flac/: 01-nasm.patch  02-relax-linux-OS detection.patch  02-relax-linux-OS-detection.patch  CMakeLists.txt  flac.txt
depends/common/ogg/: CMakeLists.txt
depends/windows/flac/: CMakeLists.txt
depends/windows/nasmw/: nasmw.txt
src/: EncoderFlac.cpp
